# ArduinoCore-imxrt

./: .gitignore  CMakeLists.txt  README.md  boards.txt  package.json  platform.txt  programmers.txt  sdk.cmake
bootloaders/arch_mix/: app.h  board_drive_led.h  bootloader.c  bootloader.hex  flexspi_hyper_flash_ops.c  imrxt_uf2_cdc.c  imrxt_uf2_cdc.h  imrxt_uf2_flash.h  imrxt_uf2_monitor.c  imrxt_uf2_monitor.h  virtual_com.c  virtual_com.h
bootloaders/arch_mix/Jflash/: Arch_mix_project.jflash  arch_mix_test_code_qspi_20190218.hex
bootloaders/rt1062/: bootloader.hex
cores/: Arduino.h  Common.h  HardwareSerial.cpp  HardwareSerial.h  SPI.cpp  SPI.h  Wire.cpp  Wire.h  main.cpp  pins_arduino.h  wiring.c  wiring_analog.c  wiring_analog.h  wiring_digital.c
cores/USB/: virtual_com.c
cores/arduino/: Arduino.h  Common.cpp  HardwareSerial.cpp  HardwareSerial.h  USBCDC.cpp  USBCDC.h  Uart.cpp  Uart.h  WMath.cpp  WVariant.h  hooks.c  main.cpp  new.cpp  wiring.c  wiring_analog.c  wiring_digital.c  wiring_private.c  wiring_private.h
cores/armgcc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.map
libraries/SPI/: SPI.cpp  library.properties
libraries/Wire/: Wire.cpp  Wire.h  library.properties
tools/cmake/: arm-none-toolchain.cmake  common.cmake  compile-flags.cmake  dump-config.cmake  executable.cmake  macros.cmake
tools/sdk/: EVKB-IMXRT1050_manifest_v3_3.xml  EVKB-IMXRT1050_manifest_v3_4.xml  EVKB-IMXRT1050_manifest_v3_5.xml  SW-Content-Register.txt
variants/arch_mix/: flexspi_nor_arduino.ld  pins_arduino.h  variant.c  variant.h
(+51 files in other folders)
